--- a/mainServer/app/templates/app/building_detail.html
+++ b/mainServer/app/templates/app/building_detail.html
@@ -8,7 +8,7 @@
         </div>
     </div>
     <!--  -->
-    {% include "./item_card.html" %}
+    {% include "./building_card.html" %}
     <div class="row">
         <div class="col-12">
             <a class="btn btn-outline-secondary float-right" href="{% url 'index' %}">戻る</a>
