work:軽微な修正

--- a/mainServer/app/templates/app/building_card.html
+++ b/mainServer/app/templates/app/building_card.html
@@ -1,41 +1,25 @@
 <div class="row">
     <div class="col-3">
-        <p>建物名</p>
+        <p>ファイル名</p>
     </div>
     <div class="col-9">
-        <p>{{ Building.name_building }}</p>
+        <p>mnist_6</p>
     </div>
 </div>
 <div class="row">
     <div class="col-3">
-        <p>建物ID</p>
+        <p>結果</p>
     </div>
     <div class="col-9">
-        <p>{{ Building.id_building }}</p>
+        <p>6</p>
     </div>
 </div>
 <div class="row">
     <div class="col-3">
-        <p>緯度, 経度</p>
+        <p>ユーザー</p>
     </div>
     <div class="col-9">
-        <p>{{ Building.address_lat }}, {{ Building.address_lon }}</p>
-    </div>
-</div>
-<div class="row">
-    <div class="col-3">
-        <p>危険度</p>
-    </div>
-    <div class="col-9">
-        <p>{{ Building.risk_rate }}</p>
-    </div>
-</div>
-<div class="row">
-    <div class="col-3">
-        <p>管理者</p>
-    </div>
-    <div class="col-9">
-        <p>{{ Building.own_user }}</p>
+        <p>keino</p>
     </div>
 </div>
 
