--- a/mainServer/app/templates/app/building_filter.html
+++ b/mainServer/app/templates/app/building_filter.html
@@ -46,7 +46,7 @@
                 <li class="list-group-building">
                     <div class="row">
                         <div class="col-3">
-                            <p>名前</p>
+                            <p>ファイル名</p>
                         </div>
                         <div class="col-9">
                             <p>{{ building.name_building }}</p>
@@ -54,15 +54,15 @@
                     </div>
                     <div class="row">
                         <div class="col-3">
-                            <p>ID</p>
+                            <p>number</p>
                         </div>
                         <div class="col-9">
-                            <p>{{building.id_building}}</p>
+                            <p>{{building.risk_rate}}</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-3">
-                            <p>管理者</p>
+                            <p>ユーザー</p>
                         </div>
                         <div class="col-9">
                             <p>{{building.own_user}}</p>
