--- a/mainServer/app/templates/app/building_detail.html
+++ b/mainServer/app/templates/app/building_detail.html
@@ -4,7 +4,7 @@
     <h2 class="text-center">詳細表示</h2>
     <div class="row">
         <div class="col-12">
-            <a class="btn btn-outline-secondary float-right" href="{% url 'index' %}">戻る</a>
+            <a class="btn btn-outline-secondary float-right" href="{% url 'index' %}">解析</a>
         </div>
     </div>
     <!--  -->
