--- a/mainServer/app/templates/app/numberimage_confirm_delete.html
+++ b/mainServer/app/templates/app/numberimage_confirm_delete.html
@@ -10,16 +10,16 @@
         <div class="row">
             <div class="col-12">
                 <div class="float-right">
-                    <a class="btn btn-outline-secondary" href="{% url 'index' %}">戻る</a>
+                    <a class="btn btn-outline-secondary" href="{% url 'image_index' %}">戻る</a>
                     <input type="submit" class="btn btn-outline-secondary" value="削除" />
                 </div>
             </div>
         </div>
-        {% include "./item_card.html" %}
+        {% include "./imagestorage_card.html" %}
         <div class="row">
             <div class="col-12">
                 <div class="float-right">
-                    <a class="btn btn-outline-secondary" href="{% url 'index' %}">戻る</a>
+                    <a class="btn btn-outline-secondary" href="{% url 'image_index' %}">戻る</a>
                     <input type="submit" class="btn btn-outline-secondary" value="削除" />
                 </div>
             </div>
